--- a/tex/01-optimization-and-probability/01-loss.tex
+++ b/tex/01-optimization-and-probability/01-loss.tex
@@ -1,4 +1,4 @@
-\item \points{1a}
+\item \points{1a} {\bf Optimization}
 
 Let $x_1, \dots, x_n$ be real numbers representing positions on a number line.
 Let $w_1, \dots, w_n$ be positive real numbers representing the importance of
