--- a/tex/01-optimization-and-probability/02-sum-max.tex
+++ b/tex/01-optimization-and-probability/02-sum-max.tex
@@ -1,4 +1,4 @@
-\item \points{1b}
+\item \points{1b} {\bf Optimization}
 
 In this class, there will be a lot of sums and maxes. Let's see what happens if
 we switch the order. Let
