--- a/tex/01-optimization-and-probability/03-roll-dice.tex
+++ b/tex/01-optimization-and-probability/03-roll-dice.tex
@@ -1,4 +1,4 @@
-\item \points{1c}
+\item \points{1c} {\bf Probability}
 
 Suppose you repeatedly roll a fair six-sided die until you roll a $1$ (and then
 you stop). Every time you roll a $2$, you lose $a$ points, and every time you
