--- a/tex/01-optimization-and-probability/04-flip-coin.tex
+++ b/tex/01-optimization-and-probability/04-flip-coin.tex
@@ -1,4 +1,4 @@
-\item \points{1d}
+\item \points{1d} {\bf Probability}
 
 Suppose the probability of a coin turning up heads is $0 < p < 1$, and that
 we flip it 7 times and get $\{ \text{H}, \text{H}, \text{T}, \text{H}, \text{T}
