--- a/tex/01-optimization-and-probability/05-gradient.tex
+++ b/tex/01-optimization-and-probability/05-gradient.tex
@@ -1,4 +1,4 @@
-\item \points{1e}
+\item \points{1e} {\bf Linear Algebra}
 
 Let's practice taking gradients, which is a key operation for being able to
 optimize continuous functions. For $\mathbf w \in \mathbb R^d$ (represented as a
