--- a/tex/02-complexity/01-n-faces.tex
+++ b/tex/02-complexity/01-n-faces.tex
@@ -1,4 +1,4 @@
-\item \points{2a}
+\item \points{2a} {\bf Complexity}
 
 Suppose we have an image of a human face consisting of $n \times n$ pixels. In
 our simplified setting, a face consists of two eyes, two ears, one nose, and one
