--- a/tex/02-complexity/02-shortest-path.tex
+++ b/tex/02-complexity/02-shortest-path.tex
@@ -1,4 +1,4 @@
-\item \points{2b}
+\item \points{2b} {\bf Dynamic Programming}
 
 Suppose we have an $n\times n$ grid. We start in the upper-left corner (position
 $(1,1)$), and we would like to reach the lower-right corner (position $(n,n)$)
