--- a/tex/02-complexity/04-backprop.tex
+++ b/tex/02-complexity/04-backprop.tex
@@ -1,4 +1,4 @@
-\item \points{2d}
+\item \points{2d} {\bf Complexity}
 
 Consider the scalar-valued function $f(\mathbf w)$ from Problem 1e. Devise a
 strategy that first does preprocessing in $O(n d^2)$ time, and then for any
