--- a/tex/A0.tex
+++ b/tex/A0.tex
@@ -25,11 +25,8 @@
 
 \clearpage
 
-Welcome to your first CS221 assignment! The goal of this assignment is to
-sharpen your math and programming skills needed for this class. If you meet the
-prerequisites, you should find these problems relatively innocuous. Some of
-these problems will occur again as subproblems of later homeworks, so make sure
-you know how to do them.
+\include{00-intro}
+\clearpage
 
 \begin{enumerate}[wide, labelindent=0pt]
 
