--- a/tex/macros.tex
+++ b/tex/macros.tex
@@ -32,7 +32,7 @@
 
 \lstset{style=mystyle}
 
-\usepackage{hyperref}
+\usepackage[hyperfootnotes=false]{hyperref}
 \usepackage{nccmath}
 \usepackage{mathtools}
 \usepackage{graphicx,caption}
@@ -106,8 +106,8 @@
 \setlist[enumerate]{itemsep=6pt, topsep=0pt}
 
 \setlength{\parindent}{0pt}
-\setlength{\parskip}{6pt}
-\setlist[enumerate]{parsep=6pt}
+\setlength{\parskip}{4pt}
+\setlist[enumerate]{parsep=4pt}
 \setlength{\unitlength}{1cm}
 
 \renewcommand{\Re}{{\mathbb R}}
