--- a/tex/02-complexity/03-staircase.tex
+++ b/tex/02-complexity/03-staircase.tex
@@ -1,4 +1,4 @@
-\item \points{2c}
+\item \points{2c} {\bf Recursion}
 
 Suppose we have a staircase with $n$ steps (we start on the ground, so we need
 $n$ total steps to reach the top). We can take as many steps forward at a time,
