--- a/tex/03-programming/01-findAlphabeticallyLastWord.tex
+++ b/tex/03-programming/01-findAlphabeticallyLastWord.tex
@@ -1,3 +1,3 @@
 \item \points{3a}
 
-Implement {\tt findAlphabeticallyLastWord} in {\tt submission.py}.
+Implement |findAlphabeticallyLastWord| in |submission.py|.
