--- a/tex/03-programming/04-sparseVectorDotProduct.tex
+++ b/tex/03-programming/04-sparseVectorDotProduct.tex
@@ -1,3 +1,3 @@
 \item \points{3d}
 
-Implement {\tt sparseVectorDotProduct} in {\tt submission.py}.
+Implement |sparseVectorDotProduct| in |submission.py|.
