--- a/tex/03-programming/05-incrementSparseVector.tex
+++ b/tex/03-programming/05-incrementSparseVector.tex
@@ -1,3 +1,3 @@
 \item \points{3e}
 
-Implement {\tt incrementSparseVector} in {\tt submission.py}.
+Implement |incrementSparseVector| in |submission.py|.
