--- a/tex/03-programming/07-computeLongestPalindromeLength.tex
+++ b/tex/03-programming/07-computeLongestPalindromeLength.tex
@@ -1,3 +1,3 @@
 \item \points{3g}
 
-Implement {\tt computeLongestPalindromeLength} in {\tt submission.py}.
+Implement |computeLongestPalindromeLength| in |submission.py|.
