--- a/tex/00-instructions/02-submission.tex
+++ b/tex/00-instructions/02-submission.tex
@@ -6,8 +6,11 @@ questions. As long as the submission is legible and well-organized, the course
 staff has no preference between a handwritten and a typeset \LaTeX submission.
 Students wishing to typeset their documents should follow these recommendations:
 \begin{itemize}
-  \item Type responses only in the *-sol.tex files.
-  \item Use the commented recommendations within the Makefile to get started.
+  \item Type responses only in |submission.tex|.
+  \item If you choose to submit a typeset document, please submit the compiled
+  PDF, {\bf not} |submission.tex|.
+  \item Use the commented recommendations within the Makefile and README.md to
+  get started.
 \end{itemize}
 
 {\bf Coding Submission:}
