Updated pytex.  Refactored points.  Added info to preamble.  Made errors visible on Gradescope..

--- a/tex/00-intro.tex
+++ b/tex/00-intro.tex
@@ -1,3 +1,9 @@
+\LARGE
+
+THIS ASSIGNMENT IS COMPLETELY OPTIONAL.  YOU WILL RECEIVE NO CREDIT FOR ANY PART OF THIS ASSIGNMENT.
+
+\normalsize
+
 {\bf Introduction}
 
 Welcome to your first XCS221 assignment! The goal of this assignment is to
