Updates and improvements to structure from other courses.

--- a/tex/00-instructions/02-1-coding-submission.tex
+++ b/tex/00-instructions/02-1-coding-submission.tex
@@ -1,18 +1,3 @@
-{\bf Submission Instructions}
-
-{\bf Written Submission:}
-All students must submit an electronic PDF containing solutions to the written
-questions. As long as the submission is legible and well-organized, the course
-staff has no preference between a handwritten and a typeset \LaTeX submission.
-Students wishing to typeset their documents should follow these recommendations:
-\begin{itemize}
-  \item Type responses only in |submission.tex|.
-  \item If you choose to submit a typeset document, please submit the compiled
-  PDF, {\bf not} |submission.tex|.
-  \item Use the commented recommendations within the Makefile and README.md to
-  get started.
-\end{itemize}
-
 {\bf Coding Submission:}
 All assignment code is in the |src/| subirectory.  You will submit only the
 |src/submission.py| file.  Please only make changes between the lines containing
@@ -50,6 +35,7 @@ python grader.py 3a-0-basic
 \end{lstlisting}
 
 Before beginning this course, we highly recommend you walk through our
-\href{nolink}{Anaconda tutorial \hl{NO LINK YET}} to familiarize yourself with
+\href{https://learning.stanford.edu/online/pluginfile.php/123352/mod_resource/content/19/Conda_Tutorial.pdf}{Anaconda
+tutorial} to familiarize yourself with
 our coding environment.  Please use the env defined in |src/environment.yml|
 to run your code.  This is the same environment used by our autograder.
