Added blank submission PDF and associated latex and make tools.

--- a/tex/submission.tex
+++ b/tex/submission.tex
@@ -11,12 +11,34 @@
 % Please do not use the '📝' character anywhere within your code.  As expected,
 % that will confuse the regular expressions we use to identify your solution.
 
+\def\assignmentnum{0 }
+\def\assignmentname{Foundations}
+\def\assignmenttitle{XCS221 Assignment \assignmentnum --- \assignmentname}
+\input{macros}
+\begin{document}
+\pagestyle{myheadings} \markboth{}{\assignmenttitle}
+
+This handout includes space for every question that requires a written response.
+Please feel free to use it to handwrite your solutions (legibly, please).  If
+you choose to typeset your solutions, the |README.md| for this assignment includes
+instructions to regenerate this handout with your typeset \LaTeX{} solutions.
+\ruleskip
+
+\LARGE
+1.a
+\normalsize
+
 % 📝_1a
 \begin{answer}
   % ### START CODE HERE ###
   % ### END CODE HERE ###
 \end{answer}
 % 📝_1a
+\clearpage
+
+\LARGE
+1.b
+\normalsize
 
 % 📝_1b
 \begin{answer}
@@ -24,6 +46,11 @@
   % ### END CODE HERE ###
 \end{answer}
 % 📝_1b
+\clearpage
+
+\LARGE
+1.c
+\normalsize
 
 % 📝_1c
 \begin{answer}
@@ -31,6 +58,11 @@
   % ### END CODE HERE ###
 \end{answer}
 % 📝_1c
+\clearpage
+
+\LARGE
+1.d
+\normalsize
 
 % 📝_1d
 \begin{answer}
@@ -38,6 +70,11 @@
   % ### END CODE HERE ###
 \end{answer}
 % 📝_1d
+\clearpage
+
+\LARGE
+1.e
+\normalsize
 
 % 📝_1e
 \begin{answer}
@@ -45,6 +82,11 @@
   % ### END CODE HERE ###
 \end{answer}
 % 📝_1e
+\clearpage
+
+\LARGE
+2.a
+\normalsize
 
 % 📝_2a
 \begin{answer}
@@ -52,6 +94,11 @@
   % ### END CODE HERE ###
 \end{answer}
 % 📝_2a
+\clearpage
+
+\LARGE
+2.b
+\normalsize
 
 % 📝_2b
 \begin{answer}
@@ -59,6 +106,11 @@
   % ### END CODE HERE ###
 \end{answer}
 % 📝_2b
+\clearpage
+
+\LARGE
+2.c
+\normalsize
 
 % 📝_2c
 \begin{answer}
@@ -66,6 +118,11 @@
   % ### END CODE HERE ###
 \end{answer}
 % 📝_2c
+\clearpage
+
+\LARGE
+2.d
+\normalsize
 
 % 📝_2d
 \begin{answer}
@@ -73,3 +130,6 @@
   % ### END CODE HERE ###
 \end{answer}
 % 📝_2d
+\clearpage
+
+\end{document}
